--- a/web/BInformation/CSSFile/index.css
+++ b/web/BInformation/CSSFile/index.css
@@ -1,37 +1,3 @@
-h1
-{
-    text-align: center;
-    color: #115cff;
-}
-
-table
-{
-    border: 2px;
-
-    background-color: #FFA500;
-
-    opacity: 20%;
-
-    border-collapse:collapse;
-}
-
-th
-{
-    text-align: right;
-
-    width: 40%;
-
-    background: #91ffa3;
-}
-
-td
-{
-    text-align: left;
-
-    background: #FFD700;
-}
-
-
 body
 {
 
@@ -44,4 +10,47 @@ body
     width: 100%;
 
     height: 100%;
+
+    align-self: center;
+
+    align-items: center;
+
+    alignment: center;
 }
+
+h1
+{
+    text-align: center;
+    color: #115cff;
+}
+
+.tableForIndex
+{
+    width: 60%;
+
+    border: 3px;
+
+    background-color: #FFA500;
+
+    opacity: 20%;
+
+    border-collapse:collapse;
+}
+
+th
+{
+    text-align: right;
+
+    width: 45%;
+
+    background: #91ffa3;
+}
+
+td
+{
+    text-align: center;
+
+    background: #FFD700;
+}
+
+
